--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "author": "Luiz Carlos",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "bcrypt": "5.0.1",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.1",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.2.5",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.6.2",
-    "uuid": "^8.3.2"
+    "express-session": "1.17.1",
+    "joi": "17.4.0",
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.10.0",
+    "mysql2": "2.2.5",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "reflect-metadata": "0.1.13",
+    "sequelize": "6.6.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
