--- a/front/package.json
+++ b/front/package.json
@@ -1,48 +1,49 @@
 {
   "name": "front",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit --setupTestFrameworkScriptFile=./tests/setup.js",
-    "test:unit:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --no-cache --runInBand",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vuejs-community/vue-filter-date-format": "1.6.3",
-    "axios": "0.21.1",
-    "core-js": "3.6.5",
-    "moment": "2.29.1",
-    "v-mask": "2.2.4",
-    "v-money": "0.8.1",
-    "vee-validate": "3.4.5",
-    "vue": "2.6.11",
-    "vue-cookies": "1.7.4",
-    "vue-i18n": "8.24.3",
-    "vue-router": "3.2.0",
-    "vue2-filters": "0.12.0",
-    "vuetify": "2.4.11",
-    "vuex": "3.4.0"
+    "axios": "^0.21.1",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.11",
-    "sass-loader": "10.0.1",
-    "vue-cli-plugin-vuetify": "~2.3.1",
-    "vue-template-compiler": "2.6.11",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.0",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
